--- a/TTL/账号.md
+++ b/TTL/账号.md
@@ -1,7 +1,7 @@
 # 公众号 #
 
-公众号邮箱 liuqiao2019001@163.com
-小程序邮箱 liuqiao2019003@163.com
+公众号邮箱 liuqiao2019001@163.com/luolan2019001
+小程序邮箱 liuqiao2019003@163.com/luolan2019003
 
 # 文件云盘，提取码6tq6 #
 
